エラーレスポンスと正常レスポンスを統一